[project]
name = "textual-diffuser"
version = "0.1.0"
description = "Text2Image application powered by AI"
authors = [
    {name = "Erick",email = "edcm.erick@gmail.com"}
]
license = {text = "Apache License 2.0"}
readme = "README.md"
requires-python = "==3.12.11"

[tool.ruff.lint]
select=[
    # Pyflakes
    "F",
    # pycodestyle
    "E",
    "W",
    # isort
    "I",
    # pep8-naming
    "N",
    # pyupgrade
    "UP",
    # flake8-todos
    "TD",
    # flake8-tidy-imports
    "TID",
    # flake8-import-conventions
    "ICN",
    # flake8-bugbear
    "B",
    # flake8-bandit
    "S",
    # flake8-simplify
    "SIM"
]